--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,13 @@
 {
+    "name": "mesour/enum",
+    "description": "Mesour enum.",
+    "license": "MIT",
+    "keywords": ["enum"],
+    "homepage": "https://github.com/mesour/enum",
+    "authors": [{
+        "name": "Matouš Němec",
+        "homepage": "http://mesour.com"
+    }],
     "require": {
         "php": ">=7.1.0",
         "consistence/consistence": ">=2.0"
@@ -6,5 +15,8 @@
     "require-dev": {
         "nette/tester": "^2.2",
         "tracy/tracy": "^2.7"
+    },
+    "autoload": {
+        "classmap": ["src/"]
     }
 }
